tests/samples/positive/traits/trait_impl_qualified_registry.ax
module trait_impl_qualified_registry;

import samplelib.traits as traits;

struct File {
    value: i32;
}

impl traits.Visible for File {
    fn read(self: &File) -> i32 {
        return self.value;
    }
}

fn main() -> i32 {
    let file = File { value: 0 };
    return file.value;
}
